# lifeline_crypto_tbot

./: .deepsource.toml  BotCommands.md  Dockerfile  Procfile  ReadMe.md  config.py  docker-compose.yml  lifeline_crypto_tbot.py  models.py  mypy.ini  pyproject.toml  schemas.py  utils.py
.github/workflows/: autoyapf.yml  black.yml  mypy.yml  python-app.yml
abi/: sell.abi
api/: bsc.py  coinbase.py  coingecko.py  coinmarketcap.py  coinpaprika.py  cryptocompare.py  eth.py  kucoin.py  matic.py
app/: __init__.py  lifeline_crypto_tbot.py
app/routers/: webhook.py
bot/: __init__.py  bsc_order.py  bsc_sniper.py  kucoin_bot.py
handler/: __init__.py  base.py  crypto.py  error.py
handler/bot/: __init__.py  kucoin_bot.py
handlers/: __init__.py  base.py  crypto.py  error.py  user.py
services/: alerts.py
