[tool.poetry]
name = "lifeline_crypto_tbot"
version = "0.1.0"
description = "Telegram crypto bot"
authors = ["Christian Pérez Villanueva <christianp@e-3consulting.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
python-dotenv = "^0.17.1"
python-coinmarketcap = "^0.2"
requests = "2.22.0"
lru-dict = "1.1.6"
requests-cache = "^0.6.3"
etherscan-python = "^2.1.0"
pandas = "^1.2.4"
html5lib = "^1.1"
aiogram = "^2.13"
emoji = "^1.2.0"
kucoin-futures-python = "^1.0.3"
cryptography = "^3.4.7"
web3 = "^5.19.0"
plotly = "^4.14.3"
psutil = "^5.8.0"
kaleido = [{ version = "<=0.2.1", platform = "win32" }, { version = "0.2.1.post1", platform = "linux" }]
pydantic = "^1.8.2"
toml = "^0.10.2"
pony = "^0.7.14"
psycopg2 = "^2.9.1"
inflection = "^0.5.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pyngrok = "^5.1.0"
bs4 = "^0.0.1"
aiocoingecko = "^1.0.0"
ethereum-gasprice = "^1.3.0"
aioetherscan = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
yapf = "^0.31.0"
pyinstrument = "^4.0.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "pony.*",
    "api.*",
    "pandas",
    "plotly.*",
    "coinmarketcapapi",
    "kucoin_futures.*",
    "lru",
    "web3.*",
    "uniswap.*",
    "cryptography.*",
    "aiohttp",
    "pydantic.*",
    "inflection",
    "dotenv",
    "fastapi",
    "app.*",
    "pyngrok",
    "aioetherscan",
    "ethereum_gasprice.*",
    "aiocoingecko.*",
    "services.alerts"
]
ignore_missing_imports = true


